Restructure backend, add seat booking, update frontend and package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13",
+    "watch-with-me": "file:..",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
