--- a/.gitignore
+++ b/.gitignore
@@ -7,40 +7,30 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# dependencies
+# Node modules
 node_modules/
 
-# production build
+# Build outputs
+dist/
+dist-ssr/
 build/
 
-# local env files
+# Local environment files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# misc
+# Editor settings
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Misc
 .DS_Store
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-
-.env
