--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start":"node index.js",
-    "build": "echo 'No build step required for backend'"
+    "start":"node index.js"
   },
   "keywords": [],
   "author": "",
